Fixed z-index of main wrapper

--- a/assets/css/Results.css
+++ b/assets/css/Results.css
@@ -11,7 +11,7 @@ body {
 	max-width: 1000px;
 	padding-top: 2rem;
 	position: relative;
-	z-index: -1;
+	z-index: 1;
 }
 
 .title-wrapper {
